--- a/index.html
+++ b/index.html
@@ -258,8 +258,13 @@
       </div>
       <div class="card">
         <h3>StudentRegistrationForm</h3>
-        <p>Smple Student form using javascript and HTML.</p>
+        <p>Simple Student form using javascript and HTML.</p>
         <a href="https://github.com/lataganneil179-arch/barangay-StudentRegistrationForm" target="_blank">View on GitHub</a>
+      </div>
+      <div class="card">
+        <h3>Group Resume</h3>
+        <p>A Resume Website built with HTML, CSS, and JavaScript.</p>
+        <a href="https://github.com/rapstarngpinas/GROUP-RESUME-WEBSITE" target="_blank">View on GitHub</a>
       </div>
     </div>
   </section>
@@ -313,3 +318,4 @@
 
 </body>
 </html>
+
