--- a/index.html
+++ b/index.html
@@ -254,17 +254,17 @@
       <div class="card">
         <h3>QuizApp</h3>
         <p>Simple quizapp using jQuery.</p>
-        <a href="https://github.com/lataganneil179-arch/QuizApp" target="_blank">View on GitHub</a>
+        <a href="https://lataganneil179-arch.github.io/QuizApp/" target="_blank">View QuizApp</a>
       </div>
       <div class="card">
         <h3>StudentRegistrationForm</h3>
         <p>Simple Student form using javascript and HTML.</p>
-        <a href="https://github.com/lataganneil179-arch/barangay-StudentRegistrationForm" target="_blank">View on GitHub</a>
+        <a href="https://lataganneil179-arch.github.io/StudentRegistrationForm" target="_blank">View on GitHub</a>
       </div>
       <div class="card">
         <h3>Group Resume</h3>
         <p>A Resume Website built with HTML, CSS, and JavaScript.</p>
-        <a href="https://github.com/rapstarngpinas/GROUP-RESUME-WEBSITE" target="_blank">View on GitHub</a>
+        <a href="https://rapstarngpinas.github.io/GROUP-RESUME-WEBSITE" target="_blank">View on GitHub</a>
       </div>
     </div>
   </section>
@@ -318,4 +318,5 @@
 
 </body>
 </html>
+
 
